Small changes of design and made a hamburger menu

--- a/index.css
+++ b/index.css
@@ -34,16 +34,6 @@ a {
     padding: 5%;
 }
 
-.dot {
-    position: fixed;
-    bottom: 3%;
-    right: 3%;
-    border-radius: 50% 50% 0 50%;
-    background-color: white;
-    width: 7.5vh;
-    height: 7.5vh;
-    mix-blend-mode: difference;
-}
 
 .main-txt-box {
     position: absolute;
@@ -83,6 +73,112 @@ a {
     margin: 5%;
 }
 
+.addition{
+    color: gray;
+    position: absolute;
+    bottom: 3%;
+    right: 5%;
+    font-weight: lighter;
+}
+.doto {
+    position: fixed;
+    bottom: 3%;
+    right: 0;
+    background-color: white;
+    width: 7.5vh;
+    height: 7.5vh;
+    mix-blend-mode: difference;
+}
+.reset{
+    margin: 0;
+}
+/*引用 ハンバーガーメニュー*/
+.menu-btn {
+    position: fixed;
+    bottom: 3%;
+    right: 0;
+    display: flex;
+    height: 7.5vh;
+    width: 7.5vh;
+    justify-content: center;
+    align-items: center;
+    z-index: 90;
+    background-color: white;
+    mix-blend-mode: difference;
+}
+.menu-btn span,
+.menu-btn span:before,
+.menu-btn span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background-color: black;
+    position: absolute;
+}
+.menu-btn span:before {
+    bottom: 8px;
+}
+.menu-btn span:after {
+    top: 8px;
+}
+#menu-btn-check:checked ~ .menu-btn span {
+    background-color: rgba(255, 255, 255, 0);/*メニューオープン時は真ん中の線を透明にする*/
+}
+#menu-btn-check:checked ~ .menu-btn span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+#menu-btn-check:checked ~ .menu-btn span::after {
+    top: 0;
+    transform: rotate(-45deg);
+}
+#menu-btn-check {
+    display: none;
+}
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 80;
+    background-color: white;
+}
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 100%;/*leftの値を変更してメニューを画面外へ*/
+    z-index: 80;
+    transition: all 0.3s;/*アニメーション設定*/
+}
+.menu-content ul {
+    padding: 70px 10px 0;
+}
+.menu-content ul li {
+    list-style: none;
+}
+.menu-content ul li a {
+    display: block;
+    width: 100%;
+    font-size: 15px;
+    box-sizing: border-box;
+    color:black;
+    text-decoration: none;
+    padding: 9px 15px 10px 0;
+    position: relative;
+}
+.menu-content ul li h1 {
+    margin: 0;
+}
+	
+#menu-btn-check:checked ~ .menu-content {
+    left: 0;/*メニューを画面内へ*/
+}
+/*引用終わり*/
 @keyframes SlideIn {
     0% {
         opacity: 0;
